[gd_scene load_steps=9 format=3 uid="uid://bdfe5cs2dvk62"]

[ext_resource type="Script" path="res://src/scenes/Enemy/bird.gd" id="1_888d5"]
[ext_resource type="Texture2D" uid="uid://c7xlq743je7ia" path="res://assets/Pixel Adventure/Enemies/bird.png" id="2_btcfn"]
[ext_resource type="PackedScene" uid="uid://dfaro8xkqeh06" path="res://src/scenes/Killzone/killzone.tscn" id="3_2yawn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2c1wx"]
atlas = ExtResource("2_btcfn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlow6"]
atlas = ExtResource("2_btcfn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mw8xe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c1wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlow6")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmkqe"]
size = Vector2(10, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s6lo"]
size = Vector2(19, 20)

[node name="Bird" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 512
collision_mask = 515
script = ExtResource("1_888d5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_mw8xe")
animation = &"run"
autoplay = "run"
frame_progress = 0.0691391

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_cmkqe")

[node name="Killzone" parent="." instance=ExtResource("3_2yawn")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_8s6lo")

[node name="Raycasts" type="Node2D" parent="."]

[node name="RaycastLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-10, 0)

[node name="RaycastRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(10, 0)

[node name="RaycastFront" type="RayCast2D" parent="Raycasts"]
position = Vector2(-5, 0)
target_position = Vector2(0, 10)

[node name="RaycastBack" type="RayCast2D" parent="Raycasts"]
position = Vector2(5, 0)
target_position = Vector2(0, 10)
